# ruleforge

taskmind/: LICENSE  README.md  pyproject.toml
taskmind-dashboard/: package-lock.json  package.json
taskmind/taskmind/: __init__.py  api.py  core.py  dsl.py  explain.py  testdf.py  utils.py
taskmind/tests/: test_core.py  test_dsl.py
